import("//build/ohos.gni")

## Build getevent {{{
ohos_executable("getevent") {
  install_enable = true
  sources = [
    "getevent.c",
  ]

  include_dirs = [
    "."
  ]

  deps = [
  ]

  install_images = [
    "system",
    "updater",
  ]
  part_name = "power_manager_native"
  subsystem_name = "powermgr"
}
## Build getevent }}}
